--- a/index.html
+++ b/index.html
@@ -1,111 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Positioning Design</title>
-    <link rel="stylesheet" href="positioning.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous" />
-    <link href="https://fonts.googleapis.com/css?family=Crete Round|Roboto|Poppins|Inter" rel="stylesheet" />
-</head>
+    <link rel="stylesheet" href="positioning.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
+      crossorigin="anonymous" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Crete Round|Roboto|Poppins|Inter"
+      rel="stylesheet" />
+  </head>
 
-<body>
-    <div class="container-fluid m-0 p-0">
-        <!-- <div class="top-bar">
-            <div class="left-head">social-growth</div>
-            <ul class="list d-none d-md-flex m-0">
-                <li class="nav-items">Services</li>
-                <li class="nav-items">Projects</li>
-                <li class="nav-items">About</li>
-                <li class="dis">Discord</li>
-            </ul>
-            <span class="menu-bar d-block d-md-none" style="padding-bottom: 24px;"><img src="assets/menu-bar.png"
-                    class="menu-bar"><span>
-        </div> -->
-        <nav class="navbar navbar-expand-md top-bar d-flex">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#"><span class="left-head">social-growth</span></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse " id="navbarSupportedContent">
-                    <ul class="navbar-nav me-0 mb-2 mb-md-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#"><span class="nav-items">
-                                    Services</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#"><span class="d-flex nav-items">Projects</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#"><span class="nav-items">About</span></a>
-                        </li>
-                        <li class="nav-items"><span class="dis "> Discord</span></li>
-                        <!-- <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
-                                Dropdown
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled">Disabled</a>
-                        </li> -->
-                    </ul>
-                    <!-- <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form> -->
-                </div>
-            </div>
-        </nav>
-        <section class="main-body d-flex flex-column">
-            <div class="heading">
-                <span class="header">Services</span>
-                <span class="subheading text-center">The Most Trusted Social Media Growth Site</span>
-            </div>
-            <div class="container mt-3 mb-3">
-                <div class="content flex-md-row flex-column justify-content-center align-items-center m-0 p-0">
-                    <div class="card1">
-                        <section class="card-content">
-                            <p class="med"><img src="assets/insta.png" id="insta"> Instagram</p>
-                            <p class="p-content">High Quality Likes, Followers and Comment</p>
-                            <button class="more">More</button>
-                        </section>
-                    </div>
-                    <div class="card2">
-                        <section class="card-content">
-                            <p class="med"><img src="assets/twit.png" id="twit"> Twitter</p>
-                            <p class="p-content">High Quality Likes, Followers and Comment</p>
-                            <button class="more">More</button>
-                        </section>
-                    </div>
-                    <div class="card3">
-                        <section class="card-content">
-                            <p class="med"><img src="assets/tube.png" id="tube"> Youtube</p>
-                            <p class="p-content">High Quality Likes, Followers and Comment</p>
-                            <button class="more">More</button>
-                        </section>
-                    </div>
-                </div>
-            </div>
-        </section>
+  <body>
+    <div class="container-fluid container-md p-5">
+      <div class="container w-100 bg-danger">
+        code error ;Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+        Aliquam, repellendus eum placeat nesciunt possimus, atque quidem laborum
+        tempore enim quae omnis sit labore ut magnam earum fuga explicabo, magni
+        praesentium!
+      </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
-        crossorigin="anonymous"></script>
-</body>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+      crossorigin="anonymous"></script>
+  </body>
 </html>
