--- a/index.html
+++ b/index.html
@@ -4,30 +4,60 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Positioning Design</title>
+    <title>Z-Index Design</title>
     <link rel="stylesheet" href="positioning.css" />
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
-      crossorigin="anonymous" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Crete Round|Roboto|Poppins|Inter"
-      rel="stylesheet" />
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" />
   </head>
 
   <body>
-    <div class="container-fluid container-md p-5">
-      <div class="container w-100 bg-danger">
-        code error ;Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-        Aliquam, repellendus eum placeat nesciunt possimus, atque quidem laborum
-        tempore enim quae omnis sit labore ut magnam earum fuga explicabo, magni
-        praesentium!
+    <section class="d-flex flex-column allCards container">
+      <div
+        class="row gap-3 p-0 m-0 d-flex align-items-center justify-content-center">
+        <div class="bodycard col-12 col-sm-4 col-md-3">
+          <img src="assets/shoe 2.png" alt="" />
+          <h3 class="lorem">Product Name</h3>
+          <span class="custom-des">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            Perspiciatis rerum similique at dignissimos nisi?
+          </span>
+          <div class="price">$12</div>
+          <button class="button">Add to Cart</button>
+        </div>
+
+        <div class="bodycard col-12 col-sm-4 col-md-3">
+          <img src="assets/shoes 3.png" alt="" />
+          <h3 class="lorem">Product Name</h3>
+          <span class="custom-des">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            Perspiciatis rerum similique at dignissimos nisi?
+          </span>
+          <div class="price">$12</div>
+          <button class="button">Add to Cart</button>
+        </div>
+
+        <div class="bodycard col-12 col-sm-4 col-md-3">
+          <img src="assets/shoe 2.png" alt="" />
+          <h3 class="lorem">Product Name</h3>
+          <span class="custom-des">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            Perspiciatis rerum similique at dignissimos nisi?
+          </span>
+          <div class="price">$12</div>
+          <button class="button">Add to Cart</button>
+        </div>
+        <div class="bodycard col-12 col-sm-4 col-md-3">
+          <img src="assets/shoes 3.png" alt="" />
+          <h3 class="lorem">Product Name</h3>
+          <span class="custom-des">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            Perspiciatis rerum similique at dignissimos nisi?
+          </span>
+          <div class="price">$12</div>
+          <button class="button">Add to Cart</button>
+        </div>
       </div>
-    </div>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
-      crossorigin="anonymous"></script>
+    </section>
   </body>
 </html>
